test/cases/unused_labels.3.zig
comptime {
    blk: {
        blk: {}
    }
}

// error
//
// :2:11: error: redefinition of label 'blk'
// :2:5: note: previous definition here
